# all

./: .gitignore
2048-bot/: README.md  requirements.txt
2048-bot/app/: 2048_colors.json  board_vision.py  bot_2048.py  strategy_2048.c
2048-bot/utilities/: color_probe.py
agent/: README.md  essay_test.py  pyproject.toml
agent/chatgpt-knockoff/: README.md  app.py
agent/deploy/: llama-server.service.example
agent/docs/: agent-task-prompt.md  ubuntu-inference-server.md
agent/simple_agent_case_2/: README.md  app.py
agent/simple_agent_case_2/src/: app.py
agent/src/local_agent/: cli.py  config.py  safety.py  server_client.py  tools.py
agent/tests/: test_safety.py  test_tools.py
ai_file/: README.md  ai_file
clink/: README.md  clink
fetch/: README.md  fetch
letter_boxed/: solver.py
mac_texter/: texter.py
matrices/: matrices.py
problem_emailer/CSES_sender_nonweekly/: email_config.example.txt  weekly_cses_sender.py
python-neofetch-dupe/: grm.txt
python-neofetch-dupe/macfetch/: config.json  img.txt  macfetch.py
ttlx/: ttlx
video-decomp/: video_svd_compressor.py
